--- a/mis finanzas/index.html
+++ b/mis finanzas/index.html
@@ -26,8 +26,63 @@
         </ul>
       </div>
     </nav>
-
   </header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-2">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Buscar" aria-describedby="basic-addon2">
+          <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+      </div><br>
+        <div class="btn-group-vertical btn-block">
+          <button type="button" class="btn btn-default">Ingresos</button>
+          <button type="button" class="btn btn-default">Gastos</button><br>
+        </div>
+        <div class="btn-group-vertical btn-block">
+          <button type="button" class="btn btn-default">Restaurantes</button>
+          <button type="button" class="btn btn-default">Hogar</button>
+          <button type="button" class="btn btn-default">Diversión</button>
+          <button type="button" class="btn btn-default">Viajes</button>
+          <button type="button" class="btn btn-default">Carro</button><br>
+        </div>
+      </div>
+      <div class="col-md-10 contenido">
+        <div class="row">
+          <div class="col-md-6"><div><button class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Nueva Transación</button></div></div>
+          <div class="col-md-6"> <div class="dropdown derecha">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Agosto 2014
+          <span class="caret"></span>
+          </button>          
+        </div><br></div>
+        <div class="row">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td><p class="parrafo">Ago</p><p class="parrafo fecha">26</p></td>
+                <td><p class="parrafo">Gasto<button class="btn btn-info btn-xs">Hogar</button> </p><p>Arriendo</p></td>
+                <td class="derecha"><p class="parrafo fecha">$900,000</p><a href="#"><span class="glyphicon glyphicon-edit">Editar</span></a><a href="#"><span class="glyphicon glyphicon-trash">Eliminar</span></a></td>
+              </tr>
+              <tr>
+                <td><p class="parrafo">Ago</p><p class="parrafo fecha">25</p></td>
+                <td><p class="parrafo">Gasto<button class="btn btn-info btn-xs">Restaurante</button></p><p>El Rincón de mi tierra</p></td>
+                <td class="derecha"><p class="parrafo fecha">$120,000</p><a href="#"><span class="glyphicon glyphicon-edit">Editar</span></a><a href="#"><span class="glyphicon glyphicon-trash">Eliminar</span> </a></td>
+              </tr>
+              <tr>
+                <td><p class="parrafo">Ago</p><p class="parrafo fecha">24</p></td>
+                <td><p class="parrafo">Ingreso</p><p>Salario</p></td>
+                <td class="derecha"><p class="parrafo fecha">$4'500,000</p><a href="#"><span class="glyphicon glyphicon-edit">Editar</span></a><a href="#"><span class="glyphicon glyphicon-trash">Eliminar</span> </a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+          
+      </div>
+      
+    </div>
+  </div>
+
 
 </body>
 </html>
