--- a/mis finanzas/index.html
+++ b/mis finanzas/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-md-2">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Buscar" aria-describedby="basic-addon2">
+          <input type="text" class="form-control" placeholder="Buscar">
           <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
       </div><br>
         <div class="btn-group-vertical btn-block">
