--- a/worldtechmakers/index.html
+++ b/worldtechmakers/index.html
@@ -12,7 +12,7 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body> 
@@ -44,11 +44,11 @@
       <div class="col-md-2"></div>      
     </div>
   </header>
-  <article>
+  <section>
     <div class="row">
       <div class="banner">
         <div class="titulo">
-        aprende a<br>programar
+          aprende a<br>programar
         </div>      
         <div class="subtitulo">
           Únete a nuestra red global.<br>
@@ -56,15 +56,38 @@
         </div>
       </div>
     </div>
+  </section>
+  <section>
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4 botones">
-        <button><strong>Descubre cursos</strong></button>
+      <div class="col-md-12 botones">
+        <button class="descubre"><strong>Descubre cursos</strong></button>
         <button class="aplica"><strong>APLICA HOY</strong></button>
       </div>
-      <div class="col-md-4"></div>
     </div>
-  </article>
+  </section>
+  <section>
+    <div class="row informacion">
+      <div class="col-md-12">
+        Alto rendimiento = excelentes resultados 
+      </div> 
+    </div>
+    <div class="row">
+      <div class="col-md-12 bloques">
+        <div class="cuadros">
+          APRENDE <br>A <br>PROGRAMAR
+        </div>
+
+        <div class="cuadros">
+          INCREMENTA <br>TUS <br>INGRESOS
+        </div>
+
+        <div class="azul">
+          ÚNETE A NUESTRA RED GROBAL
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
