--- a/responsive_design/index.html
+++ b/responsive_design/index.html
@@ -65,8 +65,8 @@
     </div>
   </section>
 
-  <section>
-    <h1>Video</h1>
+  <section id="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iOL5cKOkST4?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section id="portafolio" class="container">
@@ -121,12 +121,22 @@
     </div>
   </section>
 
-  <section>
+  <section id="contacto">
     <h2>CONTACTO</h2>
+    <form>
+      <div>
+        <input type="text" placeholder="Tu email">
+      </div>
+      <div>
+        <textarea rows="10"></textarea>
+      </div>
+      <button>ENVIAR</button>
+    </form>
   </section>
 
 	<footer>
 		© 2016 <strong>Portafolio Web</strong>, Todos los Derechos Reservados
 	</footer>
+  
 </body>
 </html>
