--- a/responsive_design/index.html
+++ b/responsive_design/index.html
@@ -15,10 +15,10 @@
       <div class="container">
         <span class="logo">< > Portafolio Web</span>
         <nav>
-          <a href="#" class="active">HOME</a>
-          <a href="">SERVICIOS</a>
-          <a href="">PORTAFOLIO</a>
-          <a href="">CONTACTO</a>
+          <a href="#home" class="active">HOME</a>
+          <a href="#servicios">SERVICIOS</a>
+          <a href="#portafolio">PORTAFOLIO</a>
+          <a href="#contacto">CONTACTO</a>
         </nav>
       </div>
     </header>
@@ -128,7 +128,7 @@
         <input type="text" placeholder="Tu email">
       </div>
       <div>
-        <textarea rows="10"></textarea>
+        <textarea rows="10" placeholder="Tu mensaje"></textarea>
       </div>
       <button>ENVIAR</button>
     </form>
@@ -137,6 +137,9 @@
 	<footer>
 		© 2016 <strong>Portafolio Web</strong>, Todos los Derechos Reservados
 	</footer>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script src="js/app.js"></script>
   
 </body>
 </html>
