--- a/JQUERY/cuadrados/index.html
+++ b/JQUERY/cuadrados/index.html
@@ -33,7 +33,8 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $('button').on('click',function() {
-      $('.squares').append('<div class="square"></div>');      });
+      $('.squares').append('<div class="square"></div>');     
+      });
     });
   </script>
 
